# django-identity

./: pyproject.toml
src/django_identity/: apps.py  models.py  validators.py
